 * Mission 3: Fix various Lua errors when playing with 2 hogs and one of them dies
 * Mission 3: Fix broken end sequence after killing cyborg or princess
 * Mission 3: Fix broken sequence of princess being caged
 * Mission 3: All girder crates now have 3 girders each
 * Mission 5: Fix crash when skipping animation while the cyborg talks before the 3rd wave of cannibals starts
 * Mission 6: Block off left cave entrance to stop player to just rope all the way around
 * Mission 6: Fix mines not being able to get triggered in first turn
 * Mission 8: Fix Lua error message at the beginning
 * Mission 10: Fix mission becoming unplayable when all hogs except the traitor died
 * All missions: Add missing texts for translation
 * All missions: Fix incorrect crate types
 * All missions: Rewrite mission texts to state missions more clearly
 * Fix swapped mission preview images of missions 2 and 3

A Space Adventure:
 + Side missions save and show your personal best successes (e.g. fastest finish in Hard Flying)
 + Spacetrip: Show 2 flowers over fully completed planets (with side missions)
 + All missions: Add skip where it doesn't hurt
 + All missions: Clarify mine timers
 + All missions: Improve displaying behaviour of mission panel
 + All missions: Change team colors
 + Side missions: Remove or shorten intro sequences
 + Side missions: Generous ready time to give more time to read the mission panel
 + Getting to the device: Put device part in a real crate, improve some dialogues
 + Final mission: Add outro sequence instead of instantly quitting
 + Bad timing: Improve messaging and choice dialog
 * Spacetrip: Fix various bugs and logic flaws in the initial mission
 * A frozen adventure: Fix bazooka and excess freezers (>6) not retained over checkpoints
 * A frozen adventure: Fix and improve poorly written messages
 * Getting to the device: Add real crate and correct message for collecting device part